Updated _config.yml to fix URL

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 
 title:            Site Title
 locale:           en_US
-url:
+url:              //sbufe.github.io/minimal-mistakes
 
 
 # Jekyll configuration
