Updated _config.yml to re-fix URL

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 
 title:            Sierra's Maker Blog
 locale:           en_US
-url:              //sbufe.github.io/minimal-mistakes
+url:              //sbufe.github.io/maker-blog
 
 
 # Jekyll configuration
