--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ owner:
   bing-verify:
   github: sbufe
   stackoverflow: #123456/username   from a "http://stackoverflow.com/users/123456/username" link
-  linkedin: #username
+  linkedin: sbufe
   xing: #username
   instagram: #username
   lastfm: #username
