More edits to social settings in config file

--- a/_config.yml
+++ b/_config.yml
@@ -30,9 +30,9 @@ owner:
   avatar: bio-photo.jpg
   bio: "Describe your self."
   email:
-  disqus-shortname:
+  disqus-shortname: sbufe
   twitter: sbufe
-  facebook: #username
+  facebook: brighterfusion
   google:
     plus: #username
     analytics:
