First draft of first blog post and Handy Resources page

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,14 +1,12 @@
 # Authors
 
-billy_rick:
-  name: Billy Rick
-  web: http://thewhip.com
-  email: billy@rick.com
-  bio: "What do you want, jewels? I am a very extravagant man."
+sierra_bufe:
+  name: Sierra Bufe
+  web: http://brighterfusion.com
+  email: websitespam@brighterfusion.com
+  bio: "I like it when you say I'm a unicorn."
   avatar: bio-photo-2.jpg
-  twitter: extravagantman
-  google:
-    plus: BillyRick
+  twitter: sbufe
 
 cornelius_fiddlebone:
   name: Cornelius Fiddlebone
