--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,8 +6,8 @@
 - title: Sample Posts
   url: /posts/
 
-- title: Theme Setup
-  url: /theme-setup/
+- title: Handy Resources
+  url: /handy-resources/
 
 - title: Made Mistakes
   url: http://mademistakes.com
