More initial edits to personalize templated site

--- a/_config.yml
+++ b/_config.yml
@@ -28,8 +28,8 @@ kramdown:
 owner:
   name: Sierra Bufe
   avatar: bio-photo.jpg
-  bio: "Describe your self."
-  email:
+  bio: "I like it when you call me a unicorn."
+  email: websitespam@brighterfusion.com
   disqus-shortname: sbufe
   twitter: sbufe
   facebook: brighterfusion
