--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,11 +3,11 @@
 - title: About
   url: /about/
 
-- title: Sample Posts
+- title: Posts
   url: /posts/
 
 - title: Handy Resources
   url: /handy-resources/
 
-- title: Made Mistakes
-  url: http://mademistakes.com
+# - title: Made Mistakes
+#   url: http://mademistakes.com
