More initial edits

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,8 +6,8 @@
 - title: Posts
   url: /posts/
 
-- title: Handy Resources
-  url: /handy-resources/
+- title: "Terms & Resources"
+  url: /terms-and-resources/
 
 # - title: Made Mistakes
 #   url: http://mademistakes.com
