Updated name of the site to BF

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site wide configuration
 
-title:            Sierra's Maker Blog
+title:            Brighter Fusion
 locale:           en_US
 url:              //sbufe.github.io/maker-blog
 
