More initial edits

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,7 +6,10 @@
 - title: Tech Blog
   url: /posts/
 
-- title: "Terms & Resources"
+- title: Maker's Blog
+  url: /posts/
+
+- title: "Handy Terms & Resources"
   url: /terms-and-resources/
 
 # - title: Made Mistakes
