Changed Terms and Resources into Resources for Beginners

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,8 +9,8 @@
 - title: Maker's Blog
   url: /posts/
 
-- title: "Handy Terms & Resources"
-  url: /terms-and-resources/
+- title: "Resources for Beginners"
+  url: /resources-for-beginners/
 
 # - title: Made Mistakes
 #   url: http://mademistakes.com
